--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-POSTGRES_USER=nofoobar
-POSTGRES_PASSWORD=supersecret
-POSTGRES_SERVER=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=blogdb
+DB_HOST=by1zqdy05oe4jgqenmuk-mysql.services.clever-cloud.com
+DB_USER=uya6nckengbb1dcd
+DB_PASSWORD=0kbaUuCKVx8RAH67fNY
+DB_NAME=by1zqdy05oe4jgqenmuk
+DB_PORT=20847
